--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </nav>
         </td></tr>
         <centre>
-            <h3>EDTECH EXCELLENCE</h3>
+            <h3>EXCELLENCE</h3>
             <H1>Master HTML with TAP Academy</H1>
             <p>Begin your web development journey of the Internet.</p><br>
             <br>
