--- a/project1.html
+++ b/project1.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plan a Trip</title>
-    <link rel="icon" href="./assets/logo.png"
+    <link rel="icon" href="./assets/logo.png"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Googl+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <h1> My Multimedia Blog &trade;</h1>
     <h2> My favourite songs all the time <img src="./assets/music.jpg" height="40" width="40"/></h2>
     <h3>Song 1</h3>
-    <audio src="./assets/song.mp3" controls></audio><br>
+    <audio src="./assets/song.mp3" controls ></audio><br>
     <br>
     <br>
     <h3>Song 2</h3>
-    <audio src="./assets/Beach.mp3" controls></audio>
+    <audio src="./assets/Beach.mp3" controls ></audio>
 
 
 
@@ -28,7 +33,7 @@
     <hr>
     <h2>Tactic Travel</h2>
     <h3>Let's visit <mark>The Famous Places</mark> Virtually and Explore them</h3>
-    <h4><mark>TajaMahal</mark></h4>
+    <h2  class="place"><mark>TajaMahal</h2>
     <video controls src="./assets/video.mp4" height="400" width="600/"></video>
     <br>
     <br>
@@ -45,7 +50,7 @@
         It attracts millions of visitors every year and is one of the Seven Wonders of the World.
 </p>
 <br>
-   <h4><mark>Varanasi</mark></h4>
+   <h2 class="place">Varanasi</h2>
    <video src="./assets/video2.mp4" height="400" width="600"></video>
    <p>Varanasi is one of the oldest continuously inhabited cities in the world, located on the banks of the River Ganga in Uttar Pradesh, India.
     It is considered the spiritual capital of India and is sacred to Hindus.
@@ -61,9 +66,9 @@
 
 </p>
 <br>
-<h4>
+<h2 class="place" id="visit">
     Ayodhya
-</h4>
+</h2>
 <video src="./assets/video4 (2).mp4" height="400" width="600"></video>
 <p>
     Ayodhya is a historic city located on the banks of the Sarayu River in Uttar Pradesh, India.
