--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <table width="100%" cellpadding="15" border="1">
         <tr><td cellpadding="10">Website built by Kavya</td>
         <td cellpadding="50">
+            <a href="#pro"><u>[view My Projects]</u></a>&nbsp&nbsp&nbsp<a href=""><U>Why Learn HTML?</U> <a href="#about"><u>about</u>|</a></a>
             <nav>
-                <a href="#about"><u>about</u>|</a>
+               
             </nav>
         </td></tr>
         <centre>
-            <h3>EXCELLENCE</h3>
+            <h3>EDTECH EXCELLENCE</h3>
             <H1>Master HTML with TAP Academy</H1>
             <p>Begin your web development journey of the Internet.</p><br>
             <br>
-            <a href="#pro"><u>[view My Projects]</u></a>&nbsp&nbsp&nbsp<a href=""><U>Why Learn HTML?</U></a>
+            
             <TABLE border="2">
                 <tr><td>6+<br>PROJECTS BUILT</td>
                 <td>100%<BR>PURE HTML</td>
